@@ -1,6 +1,5 @@
 language: ruby
 bundler_args: ""
 rvm:
-  - 1.9.3
   - 2.0.0
   - 2.1.5
