@@ -4,6 +4,7 @@
 * using ruby style constant names like `VerbPointers` -> `VERB_POINTERS`
 * renamed WordNet::WordNetDB to WordNet::DB
 * renaming a few methods in Lemma like `p_cnt` -> `pointer_count`
+* make Pointer a real class
 
 # rWordNet 0.1.3
 * Fixed a terrible bug that caused Indices to re-read the *entire* database on every failed lookup.
